# soulacy

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .golangci.yml  404.html  AUDIT_REPORT.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  Dockerfile.release  LICENSE  Makefile  POST_AUDIT_HANDOFF.md  README.md  ROADMAP.md  ROBUSTNESS_IMPLEMENTATION_NOTES.md  SECURITY.md  SESSION_HANDOFF.md  SHAKY_AREAS_REPORT.md  SHAKY_AREAS_REPORT_2.md  config.yaml.example  deploy.sh  docker-compose.lite.yml  docker-compose.yml  go.mod  go.sum  improvements.md  index.html  install.sh  mkdocs.yml  reinstall-from-scratch.command  run-story1-tests.command  run_memory_tests.sh  sitemap.xml  soulacy-medium-article.md  wrangler.jsonc
.agents/: AGENTS.md
AGENT_DESIGN/: index.html
CHANNEL_DESIGN/: index.html
CLEAN_RUNTIME_UAT_REPORT_2026-07-02/: index.html
COHORT_E_MERGE_READINESS/: index.html
CUSTOM_DISTRIBUTIONS/: index.html
EVENTS/: index.html
EXTENSIBILITY/: index.html
EXTERNAL_CHANNEL_PROTOCOL/: index.html
EXTERNAL_STORAGE_PROTOCOL/: index.html
FLOW_GRAPHS/: index.html
FOUNDER_QA_REPORT_2026-07-02/: index.html
FRAMEWORK_OVERVIEW/: index.html
FRAMEWORK_PARITY_BACKLOG/: index.html
INSTALL_UX_GAPS/: index.html
LAUNCH_STRATEGY/: index.html
OPENCLAW_PARITY/: index.html
PACKAGE_REGISTRIES/: index.html
PLUGIN_CAPABILITIES/: index.html
sdk/python/: README.md  pyproject.toml
sdk/python/soulacy/: __init__.py  _cli.py  agent.py  client.py  tool.py
sdk/python/soulacy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+4901 files in other folders)
