[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soulacy"
version = "0.1.0"
description = "Python SDK for the Soulacy agentic framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Soulacy Contributors" }]
keywords = ["ai", "agents", "llm", "soulacy", "agentic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []  # stdlib only for the core SDK; extras for optional features

[project.optional-dependencies]
vector = ["chromadb>=0.4"]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
# sy-py is a convenience CLI wrapper for Python-defined agents
sy-py = "soulacy._cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["soulacy*"]
